--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
+    "sweetalert2": "^11.0.18",
     "url-join": "^4.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
